<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PersonFragment">

    <Button
        android:id="@+id/exit_button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/error"
        android:padding="5dp"
        android:text="@string/exit_profile"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/surname_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sec_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/patronymic_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/fath_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_view" />

    <TextView
        android:id="@+id/email_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patronymic_view" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/edit_profile"
        android:textColor="@color/colorAccentLight"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_view" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/error"
        android:padding="5dp"
        android:text="@string/delete_profile"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/edit_password"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="88dp"
        android:background="@color/colorAccent"
        android:text="@string/edit_password"
        android:textColor="@color/colorAccentLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_button" />
</androidx.constraintlayout.widget.ConstraintLayout>