<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditPasswordFragment"
    android:layout_margin="20dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/old_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="password"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:minEms="12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33"
        app:met_baseColor="@color/colorAccent"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/colorAccent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:minEms="12"
        app:met_minCharacters="5"
        app:layout_constraintEnd_toEndOf="@+id/old_password"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/old_password"
        app:layout_constraintTop_toBottomOf="@+id/old_password"
        app:met_baseColor="@color/colorAccent"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/colorAccent" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:minEms="12"
        app:layout_constraintEnd_toEndOf="@+id/new_password"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/new_password"
        app:layout_constraintTop_toBottomOf="@+id/new_password"
        app:met_baseColor="@color/colorAccent"
        app:met_errorColor="@color/colorAccent"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@color/colorAccent"
        app:met_singleLineEllipsis="true"
        app:met_textColorHint="@color/colorAccent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/colorAccentLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>